--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "lorisleiva/laravel-deployer": "^0.3.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.5",
+        "deployer/recipes": "^6.2",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.0",
