--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "infusionsoft/php-sdk": "^1.5",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "lorisleiva/laravel-deployer": "^0.3.5"
